# MuslceKing

./: .env  .gitignore  .pre-commit-config.yaml  Makefile  README.md  __init__.py  docker-compose.yml  init.sql  pyproject.toml  requirements.txt  step_to_do.md  test_chat_api.py  test_chat_endpoints.py  test_exercise_kg.py  test_wger_api_data.py  test_workflow_full.py  test_workflow_nodes.py  text.txt  workflow_test_results.md
docs/superpowers/plans/: 2026-04-14-milvus-rag-implementation.md
docs/superpowers/specs/: 2026-04-14-milvus-rag-refactor-design.md
muscleking/: __init__.py  main.py
muscleking/app/agents/: agent_state.py  kb_workflow.py  lg_builder.py  lg_prompts.py
muscleking/app/api/: __init__.py  chat.py  health.py
muscleking/app/config/: __init__.py  settings.py
muscleking/app/core/: context.py  lifespan.py
muscleking/app/models/: api_model.py  model_chat.py  rerank.py
muscleking/app/persistence/: __init__.py
muscleking/app/rag/: __init__.py  embeddings.py  global_retriever.py
muscleking/app/retrieval/: README.md  __init__.py  retriever.py
muscleking/config/: settings.py
muscleking/docs/: exercise_kg_schema.md  wger_kg_schema.md
muscleking/kb_ingest/: cli.py  main.py
muscleking/scripts/: build_exercise_kg.py  exercise_db_ingest.py  wger_ingest.py
test_data_output/: categories_full.json  categories_sample.json  equipment_full.json  equipment_sample.json  exercises_full.json  exercises_sample.json  muscles_full.json  muscles_sample.json
tests/agents/: test_kb_query.py
tests/rag/: test_embeddings.py  test_global_retriever.py
(+96 files in other folders)
