[project]
name = "muscleking"
version = "0.1.0"
description = "智能健身助手 - Multi-Agent架构"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.26",
    "langchain-neo4j>=0.9.0",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.6",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.1.0",
    "loguru>=0.7.3",
    "makefile>=1.1.0",
    "milvus-lite>=2.5.1",
    "msgpack>=1.1.2",
    "psycopg[binary,pool]>=3.3.3",
    "pymilvus>=2.6.11",
    "ruff>=0.15.9",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.49",
    "torch>=2.11.0",
    "uuid6>=2025.0.1",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
